FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20180311:
AUTHOR: brnrd@FreeBSD.org

  USE_APACHE has been replaced by USES=apache.

20180308:
AUTHOR: mat@FreeBSD.org

  Ports using USES=php:phpize, php:ext, php:zend, and php:pecl are now
  flavored.  They will automatically get flavors (php56, php70, php71, php72)
  depending of the versions they support (set with IGNORE_WITH_PHP).  As a
  consequence, ports using USES=pear and USES=horde are also flavored.

  As all packages must have different package names, the following variables
  must be used in PKGNAMEPREFIX/SUFFIX:

    Variable                     + Values                +
    --------------------------------------------------------------------------------------
    PHP_PKGNAMEPREFIX            | php56- php72-         | PHP Extensions
                                 |                       | and modules
    --------------------------------------------------------------------------------------
    PHP_PKGNAMESUFFIX            | -php56 -php72         | PHP Applications
    --------------------------------------------------------------------------------------
    PECL_PKGNAMEPREFIX           | php56-pecl-           | PECL extensions
                                 |                       | automatic
    --------------------------------------------------------------------------------------
    PEAR_PKGNAMEPREFIX           | php56-pear-           | PEAR modules
                                 |                       | without PEAR_CHANNEL
    PEAR_<channel>_PKGNAMEPREFIX | php56-pear-channel-   | with PEAR_CHANNEL
                                 |                       | automatic
